--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,51 @@
     list-style: none;
     text-decoration: none;
     font-family: "Poppins", sans-serif;
+    scroll-behavior: smooth;
 }
 
 body {
     background-color: #f5f5f5;
+}
+
+.py-1 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.py-3 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+.lead {
+    font-size: 1.25rem;
+    font-weight: 300;
+    line-height: 1.5;
+    letter-spacing: 1px;
+    opacity: 0.8;
+    padding-bottom: 1rem;
+}
+
+.header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 7%;
+}
+
+.header span {
+    color:darkorange
+}
+
+.header p {
+    opacity: 0.8;;
+}
+
+.container {
+    margin: 0 auto;
+    padding: 0px 7%;
+}
+
+.image {
+    width: 260px;
 }
