--- a/css/style.css
+++ b/css/style.css
@@ -17,18 +17,30 @@ body {
     padding-bottom: 1rem;
 }
 
-.py-3 {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
+.py-2 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+.my-1 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .lead {
-    font-size: 1.25rem;
+    font-size: 1rem;
     font-weight: 300;
     line-height: 1.5;
     letter-spacing: 1px;
     opacity: 0.8;
     padding-bottom: 1rem;
+}
+
+.subtitle {
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 1.5;
+    letter-spacing: 1px;
 }
 
 .header {
@@ -50,6 +62,15 @@ body {
     padding: 0px 7%;
 }
 
+.tag {
+    background-color: #f7f7f7;
+    color: #333;
+    padding: 1rem 2rem;
+    border-radius: 5px;
+    font-weight: 700;
+    max-width:900px;
+    border: 1px solid gray;
+}
 .image {
-    width: 260px;
+    max-width: 300px
 }
